--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,1 +1,43 @@
-<p>login works!</p>
+<app-alert *ngIf="showAlert" [color]="alertColor" >
+  {{ alertMsg }}
+</app-alert>
+<!-- Login Form -->
+<form #loginForm="ngForm" (ngSubmit)="login()">
+  <!-- Email -->
+  <div class="mb-3">
+    <label class="inline-block mb-2">Email</label>
+    <input #email="ngModel"
+           type="email"
+           name="email"
+           required
+           pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"
+           [(ngModel)]="credentials.email"
+           class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+                  duration-500 focus:outline-none rounded bg-transparent
+                  focus:border-indigo-400"
+           [ngClass]="{'border-green-500': email.touched && email.dirty && email.valid, 'border-red-400' : email.touched && email.dirty && !email.valid}"
+           placeholder="Enter Email"/>
+    <p *ngIf="email.errors && email.touched && email.dirty" class="text-red-400">Email is Invalid!</p>
+  </div>
+  <!-- Password -->
+  <div class="mb-3">
+    <label class="inline-block mb-2">Password</label>
+    <input #password="ngModel"
+           type="password"
+           name="password"
+           required
+           minlength="8"
+           [(ngModel)]="credentials.password"
+           class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+                duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+           [ngClass]="{'border-green-500': password.touched && password.dirty && password.valid, 'border-red-400' : password.touched && password.dirty && !password.valid}"
+           placeholder="Password"/>
+    <p *ngIf="password.errors && password.touched && password.dirty" class="text-red-400">Password is Invalid!</p>
+  </div>
+  <button type="submit"
+          [disabled]="loginForm.invalid || inSubmission"
+          class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition
+                hover:bg-indigo-500 disabled:bg-gray-600">
+    Submit
+  </button>
+</form>
