--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<section class="container mx-auto">
+  <h1 class="uppercase text-center text-4xl grid mt-20 mb-12 items-center gap-8 tracking-widest latest">About Page</h1>
+  <p class="container mx-auto mt-4">
+    This is a basic about page to demonstrate basic routing capabilities.
+  </p>
+</section>
+
