--- a/src/app/shared/tabs-container/tabs-container.component.html
+++ b/src/app/shared/tabs-container/tabs-container.component.html
@@ -1,1 +1,8 @@
-<p>tabs-container works!</p>
+<ul class="flex flex-wrap mb-4">
+  <li *ngFor="let tab of tabs" class="flex-auto text-center">
+    <a class="block rounded py-3 px-4 transition" href="#" (click)="selectTab(tab)" [ngClass]="tab.active ? activeClasses : unActiveClasses">
+      {{ tab.tabTitle }}
+    </a>
+  </li>
+</ul>
+<ng-content></ng-content>
