--- a/src/app/video/edit/edit.component.html
+++ b/src/app/video/edit/edit.component.html
@@ -1,1 +1,26 @@
-<p>edit works!</p>
+<!-- Edit Modal -->
+<app-modal modalID="editClip">
+  <p class="text-2xl font-bold">Edit Video</p>
+
+  <!-- AlertComponent -->
+  <app-alert *ngIf="showAlert" [color]="alertColor" >
+    <p>{{ alertMsg }}</p>
+  </app-alert>
+
+  <!-- Form -->
+  <form [formGroup]="videoEditForm" (ngSubmit)="editVideo()">
+    <!-- Title -->
+    <div class="mt-4">
+      <label class="block text-xl mb-4">Title</label>
+      <app-input [control]="title" type="text" placeholder="Enter title"></app-input>
+    </div>
+
+    <div class="mt-4 text-right">
+      <button type="submit"
+              [disabled]="videoEditForm.invalid || inSubmission"
+              class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none disabled:bg-gray-600">
+        Update
+      </button>
+    </div>
+  </form>
+</app-modal>
