--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -1,1 +1,75 @@
-<p>upload works!</p>
+<!-- Main Content -->
+<section class="container mx-auto my-8 bg-secondary p-6">
+  <div class="rounded relative flex flex-col">
+    <div class="font-bold mb-6">Upload Video</div>
+
+    <ng-container>
+      <span *ngIf="!ffmpegService.isReady; else uploadEditorContainer" class="material-icons text-center text-6xl animate-spin" >
+        settings
+      </span>
+    </ng-container>
+
+    <ng-template #uploadEditorContainer>
+      <ng-container *ngIf="!videoIsUploaded; else formContainerShow">
+        <div app-event-blocker
+             (dragend)="isDragover = false"
+             (dragover)="isDragover = true"
+             (dragenter)="isDragover = true"
+             (dragleave)="isDragover = false"
+             (mouseleave)="isDragover = false"
+             (drop)="storeFile($event)"
+             [ngClass]="{'bg-indigo-400 border-indigo-400 border-solid': isDragover}"
+             class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed
+          border-gray-400 transition duration-500 hover:text-white
+          hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl">
+          <h5>Drop your file here (mp4 only!)</h5>
+          <span *ngIf="ffmpegService.isRunning" class="material-icons text-center text-6xl animate-spin" >
+            autorenew
+          </span>
+        </div>
+        <input type="file" class="mt-4" (change)="storeFile($event)">
+      </ng-container>
+      <ng-template #formContainerShow >
+        <!-- Video Editor -->
+        <div>
+          <!-- AlertComponent -->
+          <app-alert *ngIf="showAlert" [color]="alertColor" >
+            <p>{{ alertMsg }} <span *ngIf="showPercentage">{{ percentage | percent }}</span></p>
+
+          </app-alert>
+          <!-- Form -->
+          <form [formGroup]="videoUploadForm" (ngSubmit)="uploadVideo()">
+            <!-- Screenshots -->
+            <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
+              <div *ngFor="let screenshot of screenshots " class="border-8 cursor-pointer"
+                   [ngClass]="{
+                      'border-green-400':selectedScreenshot === screenshot,
+                      'border-transparent':selectedScreenshot !== screenshot,
+                   }"
+                   (click)="setSelectedScreenshot(screenshot)">
+                <img [src]="screenshot | safeURL" alt="">
+              </div>
+            </div>
+
+            <!-- Title -->
+            <div class="mt-4">
+              <label class="block text-xl mb-4">Title</label>
+              <app-input [control]="title" type="text" placeholder="Enter title"></app-input>
+            </div>
+
+            <div class="mt-4 text-right">
+              <button type="submit"
+                      [disabled]="videoUploadForm.invalid || inSubmission"
+                      class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none disabled:bg-gray-600">
+                Publish
+              </button>
+            </div>
+          </form>
+        </div>
+      </ng-template>
+    </ng-template>
+
+  </div>
+</section>
+
